# pdf2ppt

./: .gitignore  README.md  main.py  pdf2ppt.spec.example  pyproject.toml
pdf2ppt/: convert.py  gui.py
